<resources>
    <string name="app_name">SaraMonitor</string>
    <string name="usuario">Usuario</string>
    <string name="Contraseña">*************</string>
    <string name="Login">Inicar Sesión</string>
    <string name="logoDescripcion">Logo de la aplicación</string>
    <string name="sara_monitor">S.A.R.A. : Monitor</string>
    <string name="detalle_monitor">Detalle monitor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hora">Aquí va la fecha y hora</string>
    <string name="estado">Aquí va el estado</string>
    <string name="cedula">Cédula del estudiante</string>
    <string name="nombre_estudiantee">Nombre del estudiante</string>
    <string name="semestre_estudiante">Semestre del estudiante</string>
    <string name="monitoria">Línea de monitoria</string>
    <string name="fecha_asesoria">Fecha y hora de asesoría</string>
    <string name="estado_cita">Estado de la cita</string>
    <string name="cancelar_cita">Cancelar Cita</string>
    <string name="terminar_cita">Terminar Cita</string>
    <string name="inasistencia">No asistió el estudiante</string>


    <string-array name="estados">
        <item>Concretada</item>
        <item>NO se presentó el estudiante</item>
        <item>Cancelada</item>
    </string-array>
</resources>
