<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" android:id="@+id/tool_bar"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="10pt">

        <TextView
            android:id="@+id/cedula_estudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cedula"
            android:textStyle="bold"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/txt_cedula"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/cedula"
            android:layout_below="@id/cedula_estudiante"
            android:layout_marginBottom="10pt"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <TextView
            android:id="@+id/nombre_estudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/nombre_estudiantee"
            android:layout_marginRight="15pt"
            android:layout_below="@id/txt_cedula"
            android:layout_marginLeft="15pt"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/txt_nombre"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/nombre_estudiantee"
            android:layout_below="@id/nombre_estudiante"
            android:layout_marginBottom="10pt"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <TextView
            android:id="@+id/semestre_estudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/semestre_estudiante"
            android:textStyle="bold"
            android:layout_marginRight="15pt"
            android:layout_below="@id/txt_nombre"
            android:layout_marginLeft="15pt"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/txt_semestre"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/cedula"
            android:layout_below="@id/semestre_estudiante"
            android:layout_marginBottom="10pt"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <TextView
            android:id="@+id/linea_monitoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/monitoria"
            android:layout_below="@id/txt_semestre"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/txt_linea_monitoria"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/monitoria"
            android:layout_below="@id/linea_monitoria"
            android:layout_marginBottom="10pt"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <TextView
            android:id="@+id/fecha_asesoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fecha_asesoria"
            android:layout_below="@id/txt_linea_monitoria"
            android:textStyle="bold"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/txt_fecha_asesoria"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/fecha_asesoria"
            android:layout_below="@id/fecha_asesoria"
            android:layout_marginBottom="10pt"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <TextView
            android:id="@+id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/estado_cita"
            android:layout_below="@id/txt_fecha_asesoria"
            android:textStyle="bold"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt"/>
        <EditText
            android:focusable="false"
            android:id="@+id/estado_spinner"
            android:layout_below="@id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/estados"
            android:hint="@string/estado_cita"
            android:layout_marginRight="15pt"
            android:layout_marginLeft="15pt" />

    </RelativeLayout>

</LinearLayout>
